z-index fix for usercards/timeline

--- a/common/common.scss
+++ b/common/common.scss
@@ -386,7 +386,7 @@ li[title="all topics grouped by category"] {
         top: 6em;
         grid-area: timeline;
         align-self: start;
-        z-index: 400;
+        z-index: 200;
         .timeline-container {
           position: relative;
           margin: 0 !important;
